<resources>
    <string name="app_name" translatable="false">ebbly</string>
    <string name="loading_text" translatable="false">Loading…</string>
    <string name="please_input" translatable="false">Please enter %1$s</string>
    <string name="day_name_format" translatable="false">EEE</string>
    <string name="invalid_date" translatable="false">Date must be between %1$s and %2$s.</string>
    <string name="month_only_name_format" translatable="false">MMMM</string>
    <string name="year_only_format" translatable="false">yyyy</string>
    <string name="month_title1" translatable="false">January</string>
    <string name="month_title2" translatable="false">February</string>
    <string name="month_title3" translatable="false">March</string>
    <string name="month_title4" translatable="false">April</string>
    <string name="month_title5" translatable="false">May</string>
    <string name="month_title6" translatable="false">June</string>
    <string name="month_title7" translatable="false">July</string>
    <string name="month_title8" translatable="false">August</string>
    <string name="month_title9" translatable="false">September</string>
    <string name="month_title10" translatable="false">October</string>
    <string name="month_title11" translatable="false">November</string>
    <string name="month_title12" translatable="false">December</string>
    <string name="week_title1" translatable="false">Sunday</string>
    <string name="week_title2" translatable="false">Monday</string>
    <string name="week_title3" translatable="false">Tuesday</string>
    <string name="week_title4" translatable="false">Wednesday</string>
    <string name="week_title5" translatable="false">Thursday</string>
    <string name="week_title6" translatable="false">Friday</string>
    <string name="week_title7" translatable="false">Saturday</string>
    <string name="tar_search" translatable="false">Home</string>
    <string name="tar_booking" translatable="false">More</string>
    <string name="home_pick_up">Close</string>
    <string name="home_hotel_detail_more">More...</string>
    <string name="home_refundable_policy">Refund Policy</string>
    <string name="home_share_cancle">No</string>
    <string name="personal_sex_woman">Female</string>
    <string name="personal_sex_man">Male</string>
    <string name="personal_sex_other">Others</string>
    <string name="personal_email">Email</string>
    <string name="personal_collection_look">Start a new search</string>
    <string name="registration_policy">Registration policy</string>
    <string name="personal_quit_sure">Yes</string>
    <string name="network_null">Sorry. Something went wrong. Please check your network connection and try again.</string>
    <string name="network_null_reload">OK</string>
    <string name="user_account_register_phone">Mobile</string>
    <string name="user_account_register_send_code">Send</string>
    <string name="user_text_password">Password</string>
    <string name="home_pay_visa_failure">Payment failed</string>
    <string name="flight_cabin_type_economy">Economy</string>
    <string name="flight_cabin_type_luxury_economy">Premium Economy</string>
    <string name="flight_cabin_type_business">Business class</string>
    <string name="flight_cabin_type_first">First class</string>
    <string name="user_account_login_err">Your account logged in somewhere else</string>
    <string name="plane_time_out_hint">Please refresh your search to see the latest price.</string>
    <string name="user_coupon_dialog_mogos_no">I don’t have a MOGO S</string>
    <string name="user_coupon_dialog_mogos_yes">I have MOGO S</string>
    <string name="register_verification_code">Verification code</string>
    <string name="font_fontFamily_medium" translatable="false">sans-serif-medium</string>
</resources>