<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ll_dialog_parent"
        android:background="@drawable/shape_round_white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            tools:text="title"
            android:textColor="@color/black_484848"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@string/font_fontFamily_medium" />


        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/dp_20"
            android:scrollbars="vertical"
            android:text="@string/plane_time_out_hint" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
           >

            <Button
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_20"
                style="?android:attr/borderlessButtonStyle"
                android:layout_marginLeft="20dp"
                android:id="@+id/btn_not_agree"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="18dp"
                android:background="@drawable/bg_btn_circle_normal"
                android:minHeight="36dp"
                android:paddingLeft="@dimen/dp_4"
                android:paddingRight="@dimen/dp_4"
                android:text="@string/user_coupon_dialog_mogos_no"
                android:textAllCaps="false"
                android:textColor="@color/theme_color"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_agree"
                style="?android:attr/borderlessButtonStyle"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_20"
                android:layout_marginRight="20dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:background="@drawable/bg_btn_circle_full"
                android:minHeight="36dp"
                android:paddingLeft="@dimen/dp_4"
                android:paddingRight="@dimen/dp_4"
                android:text="@string/user_coupon_dialog_mogos_yes"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>