<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >

    <RelativeLayout
        android:id="@+id/cet_rl_content_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="44dp"
        android:background="@drawable/shape_radius_common_edit_gray">

        <com.happy.todo.lib_common.widget.input.PasswordEditText
            android:id="@+id/cet_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:drawablePadding="@dimen/dp_12"
            android:hint="@string/user_text_password"
            android:minHeight="36dp"
            android:maxLength="20"
            android:paddingEnd="22dp"
            android:paddingStart="22dp"
            android:paddingBottom="@dimen/dp_4"
            android:paddingTop="@dimen/dp_4"
            android:gravity="center_vertical"
            android:textColorHint="@color/gray_c5c5c5"
            android:textSize="14sp"
            android:visibility="gone"/>

        <com.happy.todo.lib_common.widget.input.AutoClearContentEditText
            android:id="@+id/cet_et_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawablePadding="@dimen/dp_12"
            android:hint="@string/personal_email"
            android:minHeight="36dp"
            android:paddingEnd="22dp"
            android:paddingStart="22dp"
            android:singleLine="true"
            android:paddingBottom="@dimen/dp_4"
            android:paddingTop="@dimen/dp_4"
            android:textSize="14sp"
            android:textColorHint="@color/gray_c5c5c5"
            android:layout_centerVertical="true"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/cet_et_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawablePadding="@dimen/dp_12"
            android:hint="@string/personal_email"
            android:minHeight="36dp"
            android:paddingEnd="22dp"
            android:paddingStart="22dp"
            android:paddingBottom="@dimen/dp_4"
            android:paddingTop="@dimen/dp_4"
            android:textColorHint="@color/gray_c5c5c5"
            android:visibility="gone" />

        <!--选择区域-->
        <LinearLayout
            android:id="@+id/cet_ll_area_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_4"
            android:paddingTop="@dimen/dp_4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cet_et_area_code"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_alignParentBottom="true"
                android:background="@color/transparent"
                android:textColor="@color/black_2D2D2D"
                android:clickable="true"
                android:gravity="center"
                android:drawableEnd="@mipmap/user_ic_down_little"
                android:drawablePadding="@dimen/dp_12"
                android:focusable="false"
                android:inputType="none"
                android:textSize="14sp"
                android:paddingStart="22dp"
                android:maxLines="1"
                android:text="+86" />

            <com.happy.todo.lib_common.widget.DashView
                android:layout_width="1px"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_height="20dp"
                app:dashOrientation="1"
                app:lineWidth="1px"
                app:lineHeight="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="@dimen/dp_4"
                android:layout_marginTop="@dimen/dp_4"
                android:background="@color/gray_c5c5c5" />


            <com.happy.todo.lib_common.widget.input.AutoClearContentEditText
                android:id="@+id/cet_et_number"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="number"
                android:background="@color/transparent"
                android:drawablePadding="@dimen/dp_12"
                android:hint="@string/user_account_register_phone"
                android:minHeight="36dp"
                android:paddingEnd="22dp"
                android:textSize="14sp"
                android:textColorHint="@color/gray_c5c5c5" />
        </LinearLayout>

        <!--发送验证码-->
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/cet_ll_msg_code"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/cet_et_msg_code"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:drawablePadding="@dimen/dp_12"
                android:hint="@string/register_verification_code"
                android:minHeight="36dp"
                android:textSize="14sp"
                android:inputType="number"
                android:maxLength="6"
                android:paddingStart="22dp"
                android:textColorHint="@color/gray_c5c5c5" />

            <TextView
                android:id="@+id/cet_tv_send_msg_code"
                android:layout_margin="1dp"
                android:gravity="center"
                android:clickable="true"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/user_account_register_send_code"
                android:layout_height="match_parent"
                android:background="@drawable/shape_common_edit_send_msg" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/cet_tv_error_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cet_rl_content_parent"
        android:layout_marginTop="4dp"
        android:drawableLeft="@mipmap/icon_edit_error"
        android:drawablePadding="6dp"
        android:gravity="center"
        android:text="Password should be 6-20 characters. "
        android:textColor="@color/red_E05857"
        android:textSize="11sp" />

</RelativeLayout>